# GrahaOS

./: .gitignore  GrahaOS_Presentation.pptx  GrahaOS_Presentationfinal.pptx  Makefile  README.md  api_keys.md.example  auto_gdb.script  automated_test.py  comprehensive_test.py  copy_to_textfiles.sh  debug_smp.gdb  full_test_report.sh  grahaos.iso  initrd.tar  limine.conf  limine.conf.bak  meson.build  run_gdb_test.sh  run_test.sh  test_boot.sh  test_design.yml  test_libctest.exp  test_qemu.py  test_serial_only.sh  test_with_fifo.sh  test_with_screenshot.py
docs/: ONBOARDING.md
docs/diagrams/: gen.js
drivers/video/: framebuffer.c  framebuffer.d  framebuffer.h
etc/: gcp.json  gcp.wit  motd.txt  plan.json
kernel/: audit.c  audit.h  autorun.c  autorun.h  capability.c  capability.h  cmdline.c  cmdline.h  debug.c  debug.d  debug_inject.c  debug_inject.h  driver.c  driver.h  elf.c  elf.d  elf.h  gcp.h  initrd.c  initrd.d  initrd.h  kernel.elf  keyboard_task.c  keyboard_task.d  keyboard_task.h  log.c  log.h  main.c  main.d  manifest_blob.c  panic.c  panic.h  percpu.c  percpu.h  pid_hash.c  pid_hash.h  rtc.c  rtc.h  shutdown.c  shutdown.h  (+7 more)
kernel/cap/: can.c  can.h  deprecated.c  deprecated.h  handle_table.c  handle_table.h  object.c  object.h  pledge.c  pledge.h  revoke.c  shim_v1.c  shim_v1.h  system.c  system.h  token.c  token.h  wasm.c  wasm.h
kernel/console/: animation.c  animation.h  cell_tx.c  cell_tx.h  console.c  console.h
kernel/driver/: userdrv.c  userdrv.h
kernel/fs/: blk_client.c  blk_client.h  blk_proto.h  cluster.c  cluster.h  cluster_v2.c  cluster_v2.h  gc.c  gc.h  grahafs.c  grahafs.h  grahafs_v2.c  grahafs_v2.h  journal.c  journal.h  journal_barrier.c  journal_barrier.h  pipe.c  pipe.h  recluster.c  recluster.h  segment.c  segment.h  simhash.c  simhash.h  vfs.c  vfs.d  vfs.h
libc/: Makefile
scripts/: analyze_grahafs.py  build-toolchain.sh  build.sh  check_sweep.sh  cross-x86_64-elf-user.ini  cross-x86_64-elf-user.ini.in  cross-x86_64-elf.ini  cross-x86_64-elf.ini.in  env_setup.sh  fetch-trust-pem.sh  gcp2wit.py  gen_manifest.py  gen_manifest_blob.py  gen_ppt.py  gen_trust_anchors.py  gen_wasm_fixtures.py  klog_sweep.py  klog_sweep_pass2.py  make_iso.sh  mkfs.gfs.c  mkfs.gfs.v2  mkfs.gfs.v2.c  parse_oops.py  parse_tap.py  run_fault_injection.sh  run_panic_test.sh  run_qemu.sh  run_soak.sh  run_tests.sh  run_tls_test_server.sh  test_vsnprintf.c  vendor-bearssl.sh  verify_phase22_manual.sh  verify_phase23_manual.sh
textfiles/: Makefile_.txt  Makefile__1.txt  README.md_.txt  build.sh_.txt  elf.c_.txt  elf.h_.txt  env_setup.sh_.txt  framebuffer.c_.txt  framebuffer.h_.txt  gdt.S_.txt  gdt.c_.txt  gdt.h_.txt  grahai.c_.txt  idt.S_.txt  idt.c_.txt  idt.h_.txt  initrd.c_.txt  initrd.h_.txt  interrupts.S_.txt  interrupts.c_.txt  interrupts.h_.txt  limine.conf_.txt  limine.h_.txt  linker.ld_.txt  linker.ld__1.txt  main.c_.txt  make_iso.sh_.txt  pit.c_.txt  pit.h_.txt  pmm.c_.txt  pmm.h_.txt  ports.h_.txt  run_qemu.sh_.txt  sched.c_.txt  sched.h_.txt  syscall.S_.txt  syscall.c_.txt  syscall.h_.txt  user.S_.txt  vmm.c_.txt  (+1 more)
user/: Makefile  aitest.c  assertpledge  assertpledge.c  auditq.c  blkctl  blkctl.c  can-ctl.c  cantest.c  caps.c  clustertest.c  dnstest.c  drvctl  drvctl.c  eventtest.c  fdtest.c  fsversions  fsversions.c  gash  gash.c  grahai  grahai.c  gsh.c  httptest.c  ifconfig  ifconfig.c  init  init.c  json.c  json.h  klog.c  ktest.c  libctest.c  libdriver.c  libdriver.h  libtap.c  libtap.h  linker.ld  mallocbomb  mallocbomb.c  (+39 more)
user/wasmd-spike-hello/: Cargo.toml
user/wasmd-spike-hello/.cargo/: config.toml
user/wasmd-spike-hello/src/: main.rs
(+369 files in other folders)
